# black-belt-2022-LATAM-DATABASE

./: README.md  app.py  main.py  main_debug.py  pyproject.toml
src/core/: config.py  utils.py
tests/: http-client.env.json  test_main.http
