[tool.poetry]
name = "Black-Belt-2022-LATAM-(DATABASE-TRACK)"
version = "1.0.0"
description = "The Black Belt is a higher level of certification that represents deep experience rather than potentially crammed knowledge."
authors = ["Sofia Escobedo <cdmx.sofia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.19.0"
fastapi = "^0.86.0"
orjson = "^3.8.1"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
